--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.5.0
+  firebase_messaging: ^10.0.5
   sendbird_sdk: ^3.0.0
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_local_notifications: ^8.1.1+1
 
 dev_dependencies:
   flutter_test:
